--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -14,7 +14,7 @@
 <body>
     <nav id="navigation" class="border-bottom navbar sticky-top navbar-expand-md navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand active" href="index.html">Home</a>
+            <a class="navbar-brand active" href="{{ site.baseurl }}">Home</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -22,9 +22,9 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <li class="nav-item">
-                    {{% if page.path == "index.html" %}}
+                    {% if page.path == "index.html" %}
                     <a class="nav-link" href="{{ site.baseurl }}/blog">Blog</a>
-                    {{% else %}}
+                    {% else %}
                     <a class="nav-link active" href="{{ site.baseurl }}/blog">Blog</a>
                     {% endif %}
                 </li>
