--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>{{ page.title }}</title>
+    <title>{{ site.github.repository_name }} - {{ page.title }}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="Style.css">
 </head>
@@ -21,14 +21,14 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <li class="nav-item">
-                    {% if page.path == "index.html" %}
-                    <a class="nav-link" href="{{ site.baseurl }}/blog">Blog</a>
-                    {% else %}
-                    <a class="nav-link active" href="{{ site.baseurl }}/blog">Blog</a>
-                    {% endif %}
-                </li>
                 <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        {% if page.path == "index.html" %}
+                        <a class="nav-link" href="{{ site.baseurl }}/blog">Blog</a>
+                        {% else %}
+                        <a class="nav-link active" href="{{ site.baseurl }}/blog">Blog</a>
+                        {% endif %}
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
                             aria-haspopup="true" aria-expanded="false">CodeMap</a>
