--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="utf-8">
@@ -8,10 +8,10 @@
     <meta http-equiv="Expires" content="0">
     <title>{{ site.github.repository_name }} - {{ page.title }}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ site.baseurl }}/Style.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 
-<body>
+<body class="d-flex flex-column">
     <nav id="navigation" class="border-bottom navbar sticky-top navbar-expand-md navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand active" href="{{ site.baseurl }}">Home</a>
