--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="utf-8">
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 
-<body>
+<body class="d-flex flex-column">
     <nav id="navigation" class="border-bottom navbar sticky-top navbar-expand-md navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand active" href="{{ site.baseurl }}">Home</a>
