--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -69,32 +69,7 @@
     </div>
 
     <div>
-        {% if paginator %}
-        <nav>
-            <ul class="pagination pagination-sm justify-content-center">
-                {% if paginator.previous_page_path %}
-                <li class="page-item">
-                    <a class="page-link" href="{{ paginator.previous_page_path }}" tabindex="-1">Newer</a>
-                </li>
-                {% else %}
-                <li class="page-item disabled">
-                    <a class="page-link" href="#" tabindex="-1">Newer</a>
-                </li>
-                {% endif %}
-                <li class="page-item"><a class="page-link" href="#">{{ paginator.page }}</a></li>
-                {% if paginator.next_page_path %}
-                <li class="page-item">
-                    <a class="page-link" href="{{ paginator.next_page_path }}">Older</a>
-                </li>
-                {% else %}
-                <li class="page-item disabled">
-                    <a class="page-link" href="#">Older</a>
-                </li>
-                {% endif %}
-            </ul>
-        </nav>
-        {{% endif %}}
-
+        {{ paginator.page }}
         <hr>
         <div class="d-flex flex-column container px-2">
             <p class="text-center">
