--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -69,7 +69,7 @@
     </div>
 
     <div>
-        {{ paginator.page }}
+        {{ page.paginator.page }}
         <hr>
         <div class="d-flex flex-column container px-2">
             <p class="text-center">
