--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -60,8 +60,8 @@
         </div>
     </nav>
 
-    <div class="flex-grow-1 flex-shrink-1">
-        <div class="d-flex flex-column container px-2 pt-2">
+    <div class="d-flex flex-column flex-grow-1 flex-shrink-1">
+        <div class="d-flex flex-column flex-grow-1 flex-shrink-1 container px-2 pt-2">
             <h2>{{ page.title }}</h2>
 
             {{ content }}
@@ -69,7 +69,6 @@
     </div>
 
     <div>
-        {{ page.paginator.page }}
         <hr>
         <div class="d-flex flex-column container px-2">
             <p class="text-center">
