Fixed layout (one last time)

--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -1,6 +1,6 @@
 ---
 layout: "default"
 ---
-<hr>
 {{ content }}
-<p><em>Posted by: {{ page.author }}, posted on {{ page.date | date: "%a, %d %b %y" }}.</em></p>
+<hr class="w-100">
+<p><em>Posted on {{ page.date | date: "%a, %d %b %y" }} by {{ page.author }}.</em></p>
