Updated timestamp to full year length

--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -3,4 +3,4 @@ layout: "default"
 ---
 {{ content }}
 <hr class="w-100">
-<p><em>Posted on {{ page.date | date: "%a, %d %b %y" }} by {{ page.author }}.</em></p>
+<p><em>Posted on {{ page.date | date: "%a, %d %b %Y" }} by {{ page.author }}.</em></p>
