Fixed title separator for posts

--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: "default"
-with_title_separator: true
 ---
+<hr class="w-100">
 {{ content }}
 <hr class="w-100">
 <p><em>Posted on {{ page.date | date: "%a, %d %b %Y" }} by {{ page.author }}.</em></p>
