--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -61,7 +61,7 @@
 
     <div class="d-flex flex-column flex-grow-1 flex-shrink-1">
         <div class="d-flex flex-column flex-grow-1 flex-shrink-1 container px-2 pt-2">
-            <h2>{{ page.title }}</h2>
+            <h2 class="mt-3">{{ page.title }}</h2>
             {{ content }}
         </div>
     </div>
